--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/png" href="../resources/images/perfil.png">
-	<link rel="stylesheet" type="text/css" href="../css/index_style.css">
+	<link rel="icon" type="image/png" href="resources/images/perfil.png">
+	<link rel="stylesheet" type="text/css" href="css/index_style.css">
 	<meta name="description" content="Landing Page da Bruxinha das Cartas que contém os links para comunicação com ela para jogar Tarô">
 	<meta name="author" content="Leonam Cruz">
-	<link rel="apple-touch-icon" href="../resources/images/perfil.png">
+	<link rel="apple-touch-icon" href="resources/images/perfil.png">
 	<meta name="robots" content="index, follow">
 <meta name="keywords" content="Bruxinha das Cartas, Landing Page, Tarô, Tarot">
 <script src="../js/index_js"></script>
