Pagina Modificada por completo

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<link rel="apple-touch-icon" href="resources/images/perfil.png">
 	<meta name="robots" content="index, follow">
 <meta name="keywords" content="Bruxinha das Cartas, Landing Page, Tarô, Tarot">
-<script src="../js/index_js"></script>
 	<title>Bruxinha das Cartas</title>
 </head>
 <body>
+	<img alt = "Imagem de Perfil da Bruxinha das Cartas" src="resources/images/bruxinha.png" width="190" height="190">
 	<h1>
 		Bruxinha das Cartas
 	</h1>
@@ -25,6 +25,8 @@
 	<a id = "yt" href="https://youtube.com/@bruxinhadascartas/" target="_blank">Veja - me no Youtube</a>
 	<br>
 	<a id = "insta" href="https://instagram.com/bruxinhadascartas" target="_blank">Acompanhe a mim no Instagram</a>
+	<br>
+	<a id = "mail" href="mailto:suporte@bruxinhadascartas.online">Envie-me um E-mail</a>
 
 </body>
 </html>
