--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<title>Bruxinha das Cartas</title>
 </head>
 <body>
-	<img alt = "Imagem de Perfil da Bruxinha das Cartas" src="resources/images/bruxinha.png" width="190" height="190">
+	<img alt = "Imagem de Perfil da Bruxinha das Cartas" src="resources/images/bruxinha.webp" width="190" height="190">
 	<h1>
 		Bruxinha das Cartas
 	</h1>
