--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/png" href="resources/images/perfil.png">
-	<link rel="stylesheet" type="text/css" href="css/index_style.css">
+	<link rel="icon" type="image/png" href="/resources/images/perfil.png">
+	<link rel="stylesheet" type="text/css" href="/css/index_style.css">
 	<meta name="description" content="Landing Page da Bruxinha das Cartas que contém os links para comunicação com ela para jogar Tarô">
 	<meta name="author" content="Leonam Cruz">
-	<link rel="apple-touch-icon" href="resources/images/perfil.png">
+	<link rel="apple-touch-icon" href="/resources/images/perfil.png">
 	<meta name="robots" content="index, follow">
 <meta name="keywords" content="Bruxinha das Cartas, Landing Page, Tarô, Tarot">
 	<title>Bruxinha das Cartas</title>
 </head>
 <body>
-	<img alt = "Imagem de Perfil da Bruxinha das Cartas" src="resources/images/bruxinha.webp" width="190" height="190">
+	<img alt = "Imagem de Perfil da Bruxinha das Cartas" src="/resources/images/bruxinha.webp" width="190" height="190">
 	<h1>
 		Bruxinha das Cartas
 	</h1>
@@ -20,13 +21,13 @@
 		Jogue Tarô Comigo
 	</h2>
 
-	<a id="zap" href="https://wa.me/4136181629/" target="_blank">Fale Comigo no Whatsapp</a>
+	<a id="zap" href="https://wa.me/4135575444/" target="_blank">Fale Comigo no Whatsapp</a>
 	<br>
 	<a id = "yt" href="https://youtube.com/@bruxinhadascartas/" target="_blank">Veja - me no Youtube</a>
 	<br>
 	<a id = "insta" href="https://instagram.com/bruxinhadascartas" target="_blank">Acompanhe a mim no Instagram</a>
 	<br>
-	<a id = "mail" href="mailto:suporte@bruxinhadascartas.online">Envie-me um E-mail</a>
+	<a id = "mail" href="mailto:suporte@bruxinhadascartas.com">Envie-me um E-mail</a>
 
 </body>
 </html>
